--- a/weather/pubspec.yaml
+++ b/weather/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   provider: ^6.0.5
   go_router: ^9.0.3
   lottie: ^2.4.0
+  intl: ^0.18.1
+  envied: ^0.3.0+3
 
 dev_dependencies:
   flutter_test:
@@ -49,6 +51,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  envied_generator: ^0.3.0+3
+  build_runner: ^2.4.6
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
