--- a/weather/pubspec.yaml
+++ b/weather/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   intl: ^0.18.1
   envied: ^0.3.0+3
   geolocator: ^9.0.2
+  geocoding: ^2.1.0
 
 dev_dependencies:
   flutter_test:
