Add share_preferences package

--- a/weather/pubspec.yaml
+++ b/weather/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   envied: ^0.3.0+3
   geolocator: ^9.0.2
   geocoding: ^2.1.0
+  shared_preferences: ^2.2.0
 
 dev_dependencies:
   flutter_test:
